chat progress commit
